	Bugfix point release. Bug(s) fixed:
	- Fix core caused by KILLs not acting fast enough and exit_client being
		called twice.
	- Rewrote NickServ identify/regain/ghost to share code and ghost to be an
		alias for regain. Also fixed the notices not being sent to the right nick.
2007-05-11 - 1.0.10
	Bugfix point release. Bug(s) fixed:
	- Fix ChanServ so that it resets topiclocked topics on burst, and also
		resets empty topics.
	- Fix DROP on unlinked nicknames and child nicknames.
	- Added missing leaveops command which doesnt deop people not on the channel
		access list.
	- Added notice about being identified when you match an entry in the access
		list.
	- Add nick + realname to NickServ info output.
	- Add a line stating which is the master of a nickname in info, if not
		infoing the master.
	- Fix a bug in the display of various unknown time elements.
	- Improve ChanServ access add help.
2007-05-14 - 1.0.11
	Bugfix point release. Bug(s) fixed:
	- Fix parting FloodServ from a channel he's not joined to
	- Fix various (some severe) memory leaks
	- Fix bug causing some channel modes to go unnoticed.
2007-05-14 - 1.0.12
	Bugfix point release.  Bug(s) fixed:
	- Fix core caused by tring to print channel name from a null struct.
	- Fix chanserv access notices to be more helpful.
2007-05-18 - 1.0.13
	Bugfix point release.  Bug(s) fixed:
	- Fix a 64 bit compilation issue.
	- Fix various additional memory leaks.
	- Reenable closing of module handles which sneaked in during debugging.
2007-??-?? - 1.0.14
	Bugfix point release.  Bug(s) fixed:
	- Fix another bug in channel modes causing a desync. (#28)
	- Only show topic, entry message, and mlock to opers or members. (#38 maybe #31)
	- set #channel floodserv should show on/off properly. (#29)
	- floodserv shouldn't insert an AKILL twice. (#37)
	- Remove stray tab from chanserv access add help.
	- the part cb may send a null channel don't let FS crash. (#43)
	- opers should be allowed to see operserv help. (#41)